k8s/manifests/apps/headlamp/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    pod-security.kubernetes.io/enforce: restricted
    gateway.infra.services/allow-routes: "true"
