k8s/manifests/apps/headlamp/headlamp.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  labels:
    external-dns: "true"
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: []
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: headlamp-headlamp
          port: 80
